--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ background: #2E2F42;
         text-align: center;
         letter-spacing: 0.02em;
         max-width: 496px;
+        margin-bottom: 8px;
 }
 .cursor-pointer {
     cursor: pointer;
