--- a/css/styles.css
+++ b/css/styles.css
@@ -157,11 +157,18 @@ background-color: #404BBF;
 .center {
     display: flex;
     gap: 24px;
+    
    
 }
 .team {
     background-color: #F4F4FD;
     padding: 120px 0;
+    width: calc ((100% - 72px) / 4);
+        border-radius: 0px 0px 4px 4px;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-top-right-radius: 4px;
+        border-bottom-left-radius: 4px;
 }
 .container plus {
     padding: 32px 0;
