--- a/css/styles.css
+++ b/css/styles.css
@@ -151,8 +151,9 @@ background-color: #404BBF;
         line-height: 1.11;
         letter-spacing: 0.02em;
         text-transform: capitalize;
-        text-align: center;
-        margin-bottom: 72px;
+            text-align: center;
+            margin-bottom: 72px;
+        
 }
 .center {
     display: flex;
@@ -171,7 +172,12 @@ background-color: #404BBF;
         border-bottom-left-radius: 4px;
 }
 .container plus {
-    padding: 32px 0;
+    display: inline-flex;
+        padding-bottom: 32px 0;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 32px;
 
 }
 img {
