--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ p {
 }
 .address ul {
     display: flex;
-    margin-left: auto;
     gap: 40px;
     margin-right: 40px;
     line-height: 1.5;
@@ -71,7 +70,7 @@ p {
     }
 
         .nav-linkk{
-        margin-right: 0;
+    margin-right: 0px;
     }
     
 .nav-link:hover,
@@ -81,6 +80,7 @@ p {
 .address {
     font-style: normal;
     display: flex;
+        margin-left: auto;
 }
 .address-link {
     color: #434455;
