--- a/css/styles.css
+++ b/css/styles.css
@@ -51,12 +51,7 @@ p {
     display: flex;
     gap: 40px;
 }
-.address ul {
-    display: flex;
-    gap: 40px;
-    margin-right: 40px;
-    line-height: 1.5;
-}
+
 .nav-link {
     color: #2e2f42;
         font-size: 16px;
@@ -87,6 +82,10 @@ p {
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
+        display: flex;
+            gap: 40px;
+            margin-right: 40px;
+            line-height: 1.5;
         
 }
 .address-link:hover,
@@ -124,7 +123,8 @@ background: #2E2F42;
 background-color: #404BBF;
 }
 .start {
-    padding: 120px 0;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 .title {
     color: #2E2F42;
@@ -143,6 +143,10 @@ background-color: #404BBF;
 .you {
  margin-bottom: 8px;
 }
+.title {
+    margin-bottom: 8px;
+    text-align: center;
+}
 .teamul {
        color: #2E2F42;
         font-family: Roboto;sans-serif;
@@ -158,13 +162,23 @@ background-color: #404BBF;
 .center {
     display: flex;
     gap: 24px;
-    
-   
+    border-radius: 0px 0px 4px 4px;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-top-right-radius: 4px;
+        border-bottom-left-radius: 4px;
+}
+.li { 
+    width: calc((100% - 72px) / 4);
+    width calc((100% - 3 * 24px) / 4)
 }
 .team {
     background-color: #F4F4FD;
     padding: 120px 0;
-    
+}
+.container plus {
+padding: 32px 0;
+padding-bottom: 32px;
 }
 img {
     background-color: #FFF;
@@ -190,11 +204,7 @@ img {
 }
 .bak {
     width: calc ((100% - 72px) / 4);
-        border-radius: 0px 0px 4px 4px;
-        border-top-left-radius: 0px;
-        border-top-right-radius: 0px;
-        border-top-right-radius: 4px;
-        border-bottom-left-radius: 4px;
+        
     
 }
     
@@ -204,6 +214,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
+  
 }
 .name {
     background-color: #FFFFFF;
