--- a/css/styles.css
+++ b/css/styles.css
@@ -166,13 +166,9 @@ background-color: #404BBF;
 .center {
     display: flex;
     gap: 24px;
-    border-radius: 0px 0px 4px 4px;
-        border-top-left-radius: 0px;
-        border-top-right-radius: 0px;
-        border-top-right-radius: 4px;
-        border-bottom-left-radius: 4px;
+
 }
-.li { 
+.lii { 
     width: calc((100% - 72px) / 4);
     width calc((100% - 3 * 24px) / 4)
 }
@@ -207,7 +203,12 @@ img {
     flex-shrink: 0;
 }
 .bak {
-    width: calc ((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-top-right-radius: 4px;
+        border-bottom-left-radius: 4px;
+        width: calc ((100% - 72px) / 4);
         
     
 }
@@ -218,8 +219,13 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
-  
+ }
+.employee-info {
+ padding: 32px 0;
+ padding-bottom: 32px;
 }
+  
+
 .name {
     background-color: #FFFFFF;
     color:#2e2f42;
