--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,8 @@ background-color: #404BBF;
 .center {
     display: flex;
     gap: 24px;
+    flex-wrap: wrap;
+    row-gap: 48px;
 
 }
 .lii { 
