--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,12 @@ p {
 .address :focus  {
     color: #404bbf;
 }
+.address li {
+margin-right: 40px;
+}
+.address li :last-child {
+    margin-right: 0;
+}
 .start {
 background: #2E2F42;
 }
@@ -226,6 +232,7 @@ img {
 }
   .add {
     gap: 24px;
+    display: flex;
   }
 
 .name {
