--- a/css/styles.css
+++ b/css/styles.css
@@ -160,16 +160,15 @@ background-color: #404BBF;
         line-height: 1.11;
         letter-spacing: 0.02em;
         text-transform: capitalize;
-            text-align: center;
-            margin-bottom: 72px;
-        
+        text-align: center;
+        margin-bottom: 72px;
+        margin-bottom: 8px;
 }
 .center {
     display: flex;
     gap: 24px;
     flex-wrap: wrap;
     row-gap: 48px;
-
 }
 .lii { 
     width: calc((100% - 72px) / 4);
@@ -202,6 +201,8 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 .text {
     background-color:#2E2F42;
@@ -210,13 +211,11 @@ img {
 }
 .bak {
     border-radius: 0px 0px 4px 4px;
-        border-top-left-radius: 0px;
-        border-top-right-radius: 0px;
-        border-top-right-radius: 4px;
-        border-bottom-left-radius: 4px;
-        width: calc ((100% - 72px) / 4);
-        
-    
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    width: calc ((100% - 72px) / 4);
 }
     
  .team-p {
