--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,13 @@ h2,
 h3, {
     margin: 0;
 }
-p {
+p, h1, h2, h3 {
     margin: 0;
 }
 .head {
     border-bottom: 1px solid #e7e9fc;
 }
 .container {
-    display: flex;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px 0 15px;
@@ -93,6 +92,7 @@ p {
 }
 .address li {
 margin-right: 40px;
+
 }
 .address li :last-child {
     margin-right: 0;
@@ -107,7 +107,7 @@ background: #2E2F42;
         text-align: center;
         letter-spacing: 0.02em;
         max-width: 496px;
-        margin-bottom: 8px;
+        margin-bottom: 0;
 }
 .cursor-pointer {
     cursor: pointer;
@@ -139,7 +139,6 @@ background-color: #404BBF;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    text-align: center;
     margin-bottom: 8px;
 }
 .second {
@@ -148,9 +147,9 @@ background-color: #404BBF;
 .you {
  margin-bottom: 8px;
 }
-.title {
+.titlee {
     margin-bottom: 8px;
-    text-align: center;
+    align-items: center;
 }
 .teamul {
        color: #2E2F42;
@@ -167,14 +166,15 @@ background-color: #404BBF;
 .center {
     display: flex;
     gap: 24px;
-    flex-wrap: wrap;
     row-gap: 48px;
+}
+.centerr {
+   flex-wrap: wrap;
 }
 .lii { 
     width: calc((100% - 72px) / 4);
     width calc((100% - 3 * 24px) / 4);
     gap: 24px;
-    margin-right: 24px;
 }
 
 .team {
