--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ background-color: #404BBF;
 .second {
     padding: 120px 0;
 }
-.visually-hidden {
+.you {
  margin-bottom: 8px;
  text-align: center;
 }
