--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,7 @@ img {
     gap: 24px;
     display: flex;
   }
+
 .name {
     background-color: #FFFFFF;
     color:#2e2f42;
@@ -241,6 +242,7 @@ img {
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
+    margin-bottom: 72px;
 }
 .logo-footer {
     color: #4D5AE5;
