--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
+    border-radius: 0px 0px 4px 4px;
  }
 .employee-info {
  padding: 32px 0;
