--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ p, h1, h2, h3, {
     display: flex;
     align-items: center;
     display: flex;
-    gap: 40px;
 }
 .my-menu {
     display: flex;
@@ -74,17 +73,12 @@ p, h1, h2, h3, {
 }
 .address {
     font-style: normal;
-    display: flex;
     margin-left: auto;
-    gap: 40px;
-   
 }
 .address-link {
     color: #434455;
         font-size: 16px;
-        line-height: 1.5;
         letter-spacing: 0.02em;
-        margin-right: 40px;
         line-height: 1.5;
 }
 .address-link:hover,
@@ -103,6 +97,8 @@ background: #2E2F42;
         letter-spacing: 0.02em;
         max-width: 496px;
         margin-bottom: 0;
+        margin-top: 0;
+        
 }
 .cursor-pointer {
     cursor: pointer;
@@ -117,10 +113,14 @@ background: #2E2F42;
     height: 56px;
     border: none;
     border-radius: 4px;
+    text-align: center;
 }
 .cursor-pointer:hover,
 .cursor-pointer:focus {
 background-color: #404BBF;
+}
+.centero {
+    margin: 0;
 }
 .start {
     padding-top: 188px;
@@ -135,6 +135,7 @@ background-color: #404BBF;
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
+    margin: 0;
 }
 .second {
     padding: 120px 0;
@@ -162,14 +163,13 @@ background-color: #404BBF;
 }
 .center {
     display: flex;
-    gap: 24px;
     row-gap: 48px;
     flex-wrap: wrap;
     column-gap: 24px;
     
 }
 .lii { 
-    width: calc((100% - 72px) / 4);
+    width:calc((100% - 72px) / 4);
    
 }
 
@@ -227,6 +227,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
+    margin: 0;
     
  }
 .employee-info {
@@ -240,6 +241,7 @@ img {
 .centerr {
     gap: 24px;
     display: flex;
+    margin: 0;
 }
 .name {
     background-color: #FFFFFF;
@@ -249,7 +251,10 @@ img {
     line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
-   
+    margin: 0;
+}
+.team-pp {
+    margin: 0;
 }
 .logo-footer {
     color: #4D5AE5;
@@ -269,12 +274,11 @@ img {
 
 .text-footer {
     color: #F4F4FD;
-    font-family: Roboto;sans-serif;
         font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
+        
         line-height: 1.5;
         letter-spacing: 0.02em;
+        margin: 0;
 }        
 
 .footer {
@@ -289,7 +293,7 @@ padding: 100px 0;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
+    
 }
 .centero {
     display: flex;
