--- a/css/styles.css
+++ b/css/styles.css
@@ -98,8 +98,8 @@ background: #2E2F42;
         margin-bottom: 0;
         margin-top: 0;
         text-align: center;
-        margin-left: 472px;
-        
+        margin-left: 272px;
+       
 }
 .cursor-pointer {
     cursor: pointer;
@@ -116,6 +116,7 @@ background: #2E2F42;
     border-radius: 4px;
     text-align: center;
     margin-top: 48px;
+    margin-left: 436px;
 }
 .cursor-pointer:hover,
 .cursor-pointer:focus {
@@ -141,6 +142,7 @@ background-color: #404BBF;
 }
 .second {
     padding: 120px 0;
+    margin-bottom: 8px;
 }
 .you {
  margin-bottom: 8px;
