--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
 a {
     text-decoration: none;
 }
-ul,ol {
+ul,ol,li {
     list-style: none;
     margin: 0;
     padding:0;
@@ -223,7 +223,7 @@ img {
 }
 .bak {
     border-radius: 0px 0px 4px 4px;
-    width: calc ((100% - 72px) / 4);
+    width: calc((100% - 72px) / 4);
 }
  .team-p {
     color: #434455;
