--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ background-color: #404BBF;
 }
 .second {
     padding: 120px 0;
-    margin-bottom: 8px;
+    
 }
 .you {
  margin-bottom: 8px;
@@ -152,6 +152,13 @@ background-color: #404BBF;
     margin-bottom: 8px;
     align-items: center;
     text-align: center;
+    color: #2E2F42;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+         margin: 0;
 }
 .teamul {
        color: #2E2F42;
@@ -201,6 +208,7 @@ img {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+    margin-bottom: 8px;
 }
 .middle {
     color: #434455;
