--- a/css/styles.css
+++ b/css/styles.css
@@ -286,10 +286,10 @@ img {
 .text-footer {
     color: #F4F4FD;
         font-size: 16px;
-        
         line-height: 1.5;
         letter-spacing: 0.02em;
         margin: 0;
+        max-width: 264px;
 }        
 
 .footer {
